# ntp

./: .gitignore  CMakeLists.txt  README.md  ntp.c  ntp.h  test.c
